force-app/main/default/objects/PDLM__Project_Phase__c/PDLM__Project_Phase__c.object-meta.xml
<CustomObject>
    <label>Project Phase</label>
    <nameField>
        <label>Project Phase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Phases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>