force-app/main/default/objects/PDLM__Project_Phase__c/fields/PDLM__Approver_2__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Project Phases (Approver 2)</relationshipLabel>
    <relationshipName>Project_Phases2</relationshipName>
    <type>Lookup</type>
</CustomField>