force-app/main/default/objects/PDLM__Project_Phase__c/fields/PDLM__Approver_4__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Approver_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 4</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Project Phases (Approver 4)</relationshipLabel>
    <relationshipName>Project_Phases4</relationshipName>
    <type>Lookup</type>
</CustomField>