force-app/main/default/objects/PDLM__Project_Phase__c/fields/PDLM__EndDate__c.field-meta.xml
<CustomField>
    <fullName>PDLM__EndDate__c</fullName>
    <description>The date this phase was set to completed, filled by system.</description>
    <inlineHelpText>The date this phase was set to completed, filled by system.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>