force-app/main/default/objects/PDLM__Project_Phase__c/fields/PDLM__In_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>PDLM__In_Approval_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Approval Process</label>
    <type>Checkbox</type>
</CustomField>